--- a/search/values.yaml
+++ b/search/values.yaml
@@ -43,11 +43,11 @@ search:
     # runAsUser: 1000
 
   service:
-    type: ClusterIP
+    type: NodePort
     port: 8000
 
   ingress:
-    enabled: true
+    enabled: false
     className: ""
     annotations: {}
       # kubernetes.io/ingress.class: nginx
@@ -113,6 +113,9 @@ pgsync:
     # The name of the service account to use.
     # If not set and create is true, a name is generated using the fullname template
     name: ""
+  
+  configMap:
+    name: ""
 
   security:
     tls: false
@@ -133,6 +136,18 @@ pgsync:
   service:
     type: ClusterIP
     port: 7433
+
+  resources: {}
+    # We usually recommend not to specify default resources and to leave this as a conscious
+    # choice for the user. This also increases chances charts run on environments with little
+    # resources, such as Minikube. If you do want to specify resources, uncomment the following
+    # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
+    # limits:
+    #   cpu: 100m
+    #   memory: 128Mi
+    # requests:
+    #   cpu: 100m
+    #   memory: 128Mi
 
   autoscaling:
     enabled: false
@@ -173,3 +188,13 @@ opensearch:
     - remote_cluster_client
 
   replicas: 3
+
+# ---------- Redis values ----------
+
+redis:
+  master:
+    containerPorts:
+      redis: 6379
+  auth:
+    enabled: true
+    password: redis
