--- a/search/templates/sync-configmap.yaml
+++ b/search/templates/sync-configmap.yaml
@@ -10,11 +10,11 @@ data:
     ELASTICSEARCH_PORT: {{ .Values.opensearch.port |  default "9200" | quote }}
     ELASTICSEARCH_USER: {{ .Values.opensearch.user }}
     ELASTICSEARCH_PASSWORD: {{ .Values.opensearch.password }}
-    ELASTICSEARCH_SCHEME:   http{{ if $.Values.opensearch.tls }}s{{ end }}
+    ELASTICSEARCH_SCHEME:   {{ .Values.pgsync.elasticsearchScheme }}
     ELASTICSEARCH_USE_SSL: {{ .Values.opensearch.tls | default "false" | quote }}
     ELASTICSEARCH_VERIFY_CERTS: {{ .Values.opensearch.tls | default "false" | quote }}
-    REDIS_HOST: {{ include "common.names.fullname" .Subcharts.redis }}-http-headless
+    REDIS_HOST: {{ include "common.names.fullname" .Subcharts.redis }}-master
     REDIS_PORT: {{ .Values.redis.master.containerPorts.redis | quote }}
     REDIS_AUTH: {{ .Values.redis.auth.password | quote }}
-    ELASTICSEARCH: "false"
-    OPENSEARCH: "true"
+    ELASTICSEARCH: {{ .Values.pgsync.elasticsearch | quote }}
+    OPENSEARCH: {{ .Values.pgsync.opensearch | quote }}
