--- a/charts/search/Chart.yaml
+++ b/charts/search/Chart.yaml
@@ -1,10 +1,10 @@
 apiVersion: v2
 name: search
-version: "0.0.1"
-kubeVersion: ">= 1.21.0 <= 1.27.3"
+version: "0.0.2"
+kubeVersion: ">= 1.21.0"
 description: Retake Search is real-time keyword + semantic neural search infrastructure for developers, built to stay in sync with fast-changing databases.
 type: application
-appVersion: "0.1.21"
+appVersion: "0.1.30"
 keywords:
   - postgres
   - opensearch
