Conditional opensearch, redis and pgsync

--- a/charts/search/values.yaml
+++ b/charts/search/values.yaml
@@ -83,6 +83,7 @@ search:
 # ---------- PGSync values ----------
 
 pgsync:
+  enabled: true
   name: "sync"
   labels:
     - "sync"
@@ -156,6 +157,7 @@ pgsync:
 # ---------- OpenSearch values ----------
 
 opensearch:
+  enabled: true
   clusterName: "opensearch-cluster"
   nodeGroup: "master"
   user: admin
@@ -183,6 +185,7 @@ opensearch:
 # ---------- Redis values ----------
 
 redis:
+  enabled:  true
   master:
     containerPorts:
       redis: 6379
