--- a/charts/search/Chart.yaml
+++ b/charts/search/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 name: search
-version: "0.0.5"
+version: "0.0.6"
 kubeVersion: ">= 1.21.0"
 description: Retake Search is real-time keyword + semantic neural search infrastructure for developers, built to stay in sync with fast-changing databases.
 type: application
@@ -21,9 +21,11 @@ dependencies:
   - name: opensearch
     version: "2.12.0"
     repository: https://opensearch-project.github.io/helm-charts/
+    condition: opensearch.enabled
   - name: redis
     version: "17.14.5"
     repository: https://charts.bitnami.com/bitnami
+    condition: redis.enabled
 maintainers:
   - name: Mauricio Araujo
     email: mauricio.araujo@proton.me
