--- a/charts/search/templates/pgsync-service.yaml
+++ b/charts/search/templates/pgsync-service.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.pgsync.enabled }}
 apiVersion: v1
 kind: Service
 metadata:
@@ -13,3 +14,4 @@ spec:
       name: http
   selector:
     {{- include "sync.selectorLabels" . | nindent 4 }}
+{{- end }}
