--- a/charts/search/templates/search-configmap.yaml
+++ b/charts/search/templates/search-configmap.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.search.enabled }}
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -14,3 +15,4 @@ data:
     PGSYNC_HOST: {{ include "sync.fullname" . }}
     PGSYNC_PORT: {{ .Values.pgsync.service.port | default "7433" | quote }}
     PGSYNC_SSL_ENABLED: {{ .Values.pgsync.security.tls | default "false" | quote }}
+{{- end }}
