--- a/charts/search/templates/search-ingress.yaml
+++ b/charts/search/templates/search-ingress.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.search.enabled }}
 {{- if .Values.search.ingress.enabled -}}
 {{- $fullName := include "search.fullname" . -}}
 {{- $svcPort := .Values.search.service.port -}}
@@ -58,4 +59,5 @@ spec:
               {{- end }}
           {{- end }}
     {{- end }}
+{{- end }}
 {{- end }}
