--- a/charts/search/templates/search-serviceaccount.yaml
+++ b/charts/search/templates/search-serviceaccount.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.search.enabled }}
 {{- if .Values.search.serviceAccount.create -}}
 apiVersion: v1
 kind: ServiceAccount
@@ -9,4 +10,5 @@ metadata:
   annotations:
     {{- toYaml . | nindent 4 }}
   {{- end }}
+{{- end }}
 {{- end }}
