--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,6 +1,10 @@
 name: Release Charts
 
-on: push
+on:
+  push:
+    branches:
+      - dev
+      - main
 
 jobs:
   release:
@@ -13,12 +17,20 @@ jobs:
           ref: ${{ github.event.pull_request.merge_commit_sha }}
           fetch-depth: "0"
 
+      - name: Set default bump
+        run: |
+          if [ "$GITHUB_REF" == "refs/heads/dev" ]; then
+            echo "DEFAULT_BUMP=patch" >> $GITHUB_ENV
+          elif [ "$GITHUB_REF" == "refs/heads/main" ]; then
+            echo "DEFAULT_BUMP=minor" >> $GITHUB_ENV
+          fi
+
       - name: Bump version and push tag
         uses: anothrNick/github-tag-action@1.64.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           WITH_V: true
-          DEFAULT_BUMP: patch
+          DEFAULT_BUMP: $DEFAULT_BUMP
           PRERELEASE: true
 
       - name: Checkout
