Add apikey secret, add release namespace to resources

--- a/charts/search/templates/pgsync-deployment.yaml
+++ b/charts/search/templates/pgsync-deployment.yaml
@@ -3,6 +3,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: {{ include "sync.fullname" . }}
+  namespace: {{ .Release.Namespace | quote }}
   labels:
     {{- include "sync.labels" . | nindent 4 }}
 spec:
