--- a/charts/search/templates/pgsync-serviceaccount.yaml
+++ b/charts/search/templates/pgsync-serviceaccount.yaml
@@ -4,6 +4,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: {{ include "sync.serviceAccountName" . }}
+  namespace: {{ .Release.Namespace | quote }}
   labels:
     {{- include "sync.labels" . | nindent 4 }}
   {{- with .Values.pgsync.serviceAccount.annotations }}
