--- a/charts/search/templates/search-serviceaccount.yaml
+++ b/charts/search/templates/search-serviceaccount.yaml
@@ -4,6 +4,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: {{ include "search.serviceAccountName" . }}
+  namespace: {{ .Release.Namespace | quote }}
   labels:
     {{- include "search.labels" . | nindent 4 }}
   {{- with .Values.search.serviceAccount.annotations }}
