--- a/charts/search/templates/psync-configmap.yaml
+++ b/charts/search/templates/psync-configmap.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: {{ include "sync.configMapName" . }}
+  namespace: {{ .Release.Namespace | quote }}
   labels:
     {{- include "sync.labels" . | nindent 4 }}
 data:
