--- a/charts/search/templates/search-configmap.yaml
+++ b/charts/search/templates/search-configmap.yaml
@@ -3,10 +3,11 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: {{ include "search.configMapName" . }}
+  namespace: {{ .Release.Namespace | quote }}
   labels:
     {{- include "search.labels" . | nindent 4 }}
 data:
-    API_KEY: retake-test-key
+    API_KEY: {{ .Values.search.security.apiKey }}
     OPENSEARCH_HOST: {{ .Values.opensearch.masterService }}-headless
     OPENSEARCH_PORT: {{ .Values.opensearch.port |  default "9200" | quote }}
     OPENSEARCH_USER: {{ .Values.opensearch.user }}
