--- a/charts/search/templates/sync/serviceaccount.yaml
+++ b/charts/search/templates/sync/serviceaccount.yaml
@@ -1,5 +1,5 @@
-{{- if .Values.pgsync.enabled }}
-{{- if .Values.pgsync.serviceAccount.create -}}
+{{- if .Values.sync.enabled }}
+{{- if .Values.sync.serviceAccount.create -}}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
@@ -7,7 +7,7 @@ metadata:
   namespace: {{ .Release.Namespace | quote }}
   labels:
     {{- include "sync.labels" . | nindent 4 }}
-  {{- with .Values.pgsync.serviceAccount.annotations }}
+  {{- with .Values.sync.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
   {{- end }}
