--- a/charts/paradedb/Chart.yaml
+++ b/charts/paradedb/Chart.yaml
@@ -23,7 +23,11 @@ version: 0.3.3
 # It is recommended to use it with quotes.
 appVersion: 0.2.19
 dependencies:
-  - name: pgo
-    version: "5.4.1"
-    repository: oci://registry.developers.crunchydata.com/crunchydata
+  - name: postgres-operator
+    version: "1.10.1"
+    repository: https://opensource.zalando.com/postgres-operator/charts/postgres-operator
     condition: installOperator
+  - name: postgres-operator-ui
+    version: "1.10.1"
+    repository: https://opensource.zalando.com/postgres-operator/charts/postgres-operator-ui
+    condition: installUI
