--- a/charts/paradedb/values.yaml
+++ b/charts/paradedb/values.yaml
@@ -38,7 +38,9 @@ cluster:
   # Description for the cluster
   description: "Cluster to run ParadeDB"
   # Image for the PostgreSQL instance
-  imageName: paradedb/paradedb:15-0.2.21
+  imageName: paradedb/paradedb:15-v0.2.25
+  # Image pull policy
+  imagePullPolicy: IfNotPresent
   # Number of instances
   instances: 3
   # Start delay for the instances
@@ -144,6 +146,16 @@ cluster:
     # Client certificates
     # clientCASecret: my-postgres-client-cert
     # replicationTLSSecret: my-postgres-client-cert
+
+  # Monitoring
+  monitoring:
+    enablePodMonitor: true
+    # customQueriesConfigMap:
+    #   - name: example-monitoring
+    #     key: custom-queries
+    # customQueriesSecret:
+    #   - name: example-monitoring-secret
+    #     key: pg-database
 
   # Affinity configurations for the cluster
   affinity:
