--- a/charts/paradedb/values.yaml
+++ b/charts/paradedb/values.yaml
@@ -99,6 +99,14 @@ cluster:
         - CREATE EXTENSION IF NOT EXISTS hypopg CASCADE;
         - CREATE EXTENSION IF NOT EXISTS rum CASCADE;
         - CREATE EXTENSION IF NOT EXISTS age CASCADE;
+        - GRANT USAGE, CREATE ON SCHEMA paradedb TO paradedb;
+        - GRANT USAGE, CREATE ON SCHEMA public TO paradedb;
+        - GRANT ALL ON ALL TABLES IN SCHEMA paradedb TO paradedb;
+        - GRANT ALL ON ALL TABLES IN SCHEMA public TO paradedb;
+        - ALTER DEFAULT PRIVILEGES IN SCHEMA paradedb
+        - GRANT ALL PRIVILEGES ON TABLES TO paradedb;
+        - ALTER DEFAULT PRIVILEGES IN SCHEMA public
+        - GRANT ALL PRIVILEGES ON TABLES TO paradedb;
 
   # Storage configurations for the cluster
   storage:
