--- a/charts/paradedb/values.yaml
+++ b/charts/paradedb/values.yaml
@@ -99,14 +99,7 @@ cluster:
         - CREATE EXTENSION IF NOT EXISTS hypopg CASCADE;
         - CREATE EXTENSION IF NOT EXISTS rum CASCADE;
         - CREATE EXTENSION IF NOT EXISTS age CASCADE;
-        - GRANT USAGE, CREATE ON SCHEMA paradedb TO paradedb;
-        - GRANT USAGE, CREATE ON SCHEMA public TO paradedb;
-        - GRANT ALL ON ALL TABLES IN SCHEMA paradedb TO paradedb;
-        - GRANT ALL ON ALL TABLES IN SCHEMA public TO paradedb;
-        - ALTER DEFAULT PRIVILEGES IN SCHEMA paradedb
-        - GRANT ALL PRIVILEGES ON TABLES TO paradedb;
-        - ALTER DEFAULT PRIVILEGES IN SCHEMA public
-        - GRANT ALL PRIVILEGES ON TABLES TO paradedb;
+        - ALTER USER paradedb WITH SUPERUSER;
 
   # Storage configurations for the cluster
   storage:
