--- a/charts/paradedb/values.yaml
+++ b/charts/paradedb/values.yaml
@@ -99,8 +99,10 @@ cluster:
         - CREATE EXTENSION IF NOT EXISTS hypopg CASCADE;
         - CREATE EXTENSION IF NOT EXISTS rum CASCADE;
         - CREATE EXTENSION IF NOT EXISTS age CASCADE;
+        - ALTER DATABASE paradedb SET search_path TO public,paradedb;
         - ALTER USER paradedb WITH SUPERUSER;
-        - VACUUM FULL paradedb.mock_items;
+      postInitTemplateSQL:
+        - ALTER DATABASE template1 SET search_path TO public,paradedb;
 
   # Storage configurations for the cluster
   storage:
