migrate monorepo code

--- a/charts/paradedb/.helmignore
+++ b/charts/paradedb/.helmignore
@@ -1,7 +1,10 @@
 # Patterns to ignore when building packages.
 # This supports shell glob matching, relative path matching, and
 # negation (prefixed with !). Only one pattern per line.
+
+# macOS
 .DS_Store
+
 # Common VCS dirs
 .git/
 .gitignore
@@ -10,12 +13,14 @@
 .hg/
 .hgignore
 .svn/
+
 # Common backup files
 *.swp
 *.bak
 *.tmp
 *.orig
 *~
+
 # Various IDEs
 .project
 .idea/
