--- a/.github/workflows/lint-markdown.yml
+++ b/.github/workflows/lint-markdown.yml
@@ -1,23 +1,20 @@
 # workflows/lint-markdown.yml
 #
-# Markdown: Linting
+# Lint Markdown
 # Lint Markdown files using Prettier.
 
-name: Linting
+name: Lint Markdown
 
 on:
   pull_request:
     paths:
-      - "**.md"
-      - "**/**.md"
-      - ".github/**/**.md"
+      - "**/*.md"
+      - "**/*.mdx"
       - ".github/workflows/lint-markdown.yml"
   workflow_dispatch:
 
-# This guarantees that if you push many commits to the same PR, only the latest
-# commit will get run (others get cancelled)
 concurrency:
-  group: lint-markdown-${{ github.head_ref || github.run_id }}
+  group: lint-markdown-${{ github.head_ref || github.ref }}
   cancel-in-progress: true
 
 jobs:
@@ -27,16 +24,16 @@ jobs:
 
     steps:
       - name: Checkout Git Repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Set up NodeJS Environment
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
 
-      # We have to use npm install -g here, as the yarn
-      # equivalent "yarn global add" doesn't correctly
-      # add the command to the path in GitHub Actions.
       - name: Install Prettier
-        run: npm install -g prettier
+        run: npm install -g prettier markdownlint-cli
 
-      - name: Check if Markdown files are Formatted
-        run: prettier --check '**/**.md' # Prettier glob syntax hits all .md files with this
+      - name: Run Markdown Lint
+        run: markdownlint '**/*.md'
+
+      - name: Run Pettier
+        run: prettier --check '{**/*.md,**/*.mdx}'
