--- a/.github/workflows/lint-pr-title.yml
+++ b/.github/workflows/lint-pr-title.yml
@@ -1,9 +1,9 @@
 # workflows/lint-pr-title.yml
 #
-# PR Title: Linting
+# Lint PR Title
 # Lint and enforce proper PR title format.
 
-name: Linting
+name: Lint PR Title
 
 on:
   pull_request:
@@ -15,12 +15,17 @@ on:
 permissions:
   pull-requests: read
 
+concurrency:
+  group: lint-pr-title-${{ github.head_ref || github.ref }}
+  cancel-in-progress: true
+
 jobs:
   lint-pr-title:
     name: Validate PR Title
     runs-on: ubuntu-latest
 
     steps:
-      - uses: amannn/action-semantic-pull-request@v5
+      - name: Checkout Git Repository
+        uses: amannn/action-semantic-pull-request@v5
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
