--- a/.github/workflows/publish-helm-chart.yml
+++ b/.github/workflows/publish-helm-chart.yml
@@ -8,6 +8,9 @@
 name: Publish Helm Chart
 
 on:
+  push:
+    branches:
+      - main
   workflow_dispatch:
     inputs:
       appVersion:
@@ -54,8 +57,15 @@ jobs:
       - name: Set Helm Chart Release Versions
         working-directory: charts/paradedb/
         run: |
+          # If no appVersion is provided, we use the latest ParadeDB version
+          if [ -z "${{ github.event.inputs.appVersion }}" ]; then
+            LATEST_TAG=$(curl -s https://api.github.com/repos/paradedb/paradedb/tags | jq -r '.[0].name')
+            APP_VERSION=${LATEST_TAG#v}
+          else
+            APP_VERSION=${{ github.event.inputs.appVersion }}
+          fi
           # Update appVersion to the GitHub Release version and version to the Helm Chart version
-          sed -i 's/^appVersion: .*/appVersion: ${{ github.event.inputs.appVersion }}/' Chart.yaml
+          sed -i "s/^appVersion: .*/appVersion: $APP_VERSION/" Chart.yaml
           sed -i 's/^version: .*/version: ${{ vars.CHART_VERSION_MAJOR }}.${{ vars.CHART_VERSION_MINOR }}.${{ vars.CHART_VERSION_PATCH }}/' Chart.yaml
 
       - name: Run chart-releaser
