--- a/.github/workflows/publish-helm-chart.yml
+++ b/.github/workflows/publish-helm-chart.yml
@@ -45,14 +45,14 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GHA_CREATE_RELEASE_PAT }}
         run: |
-          NEW_HELM_VERSION_PATCH=$(( ${{ vars.CHART_VERSION_PATCH }} + 1 ))
+          NEW_CHART_VERSION_PATCH=$(( ${{ vars.CHART_VERSION_PATCH }} + 1 ))
           gh api \
             --method PATCH \
             -H "Accept: application/vnd.github+json" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
-            /repos/paradedb/helm-charts/actions/variables/HELM_VERSION_PATCH \
-            -f name='HELM_VERSION_PATCH' \
-            -f value='${NEW_HELM_VERSION_PATCH}'
+            /repos/paradedb/helm-charts/actions/variables/CHART_VERSION_PATCH \
+            -f name='CHART_VERSION_PATCH' \
+            -f value='${NEW_CHART_VERSION_PATCH}'
 
       - name: Set Helm Chart Release Versions
         working-directory: charts/paradedb/
