--- a/.github/workflows/publish-helm-chart.yml
+++ b/.github/workflows/publish-helm-chart.yml
@@ -38,27 +38,15 @@ jobs:
           git config user.name "$GITHUB_ACTOR"
           git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
 
-      # We have a separate version for our Helm Chart, since it needs to always increment by
-      # one for every production release, independently of the ParadeDB version. Any non-patch
-      # version increment should be done manually in GitHub Actions Variables.
-      - name: Increment Helm Chart Version Number in GitHub Actions Variables
-        env:
-          GH_TOKEN: ${{ secrets.GHA_CREATE_RELEASE_PAT }}
-        run: |
-          NEW_CHART_VERSION_PATCH=$(( ${{ vars.CHART_VERSION_PATCH }} + 1 ))
-          gh api \
-            --method PATCH \
-            -H "Accept: application/vnd.github+json" \
-            -H "X-GitHub-Api-Version: 2022-11-28" \
-            /repos/paradedb/helm-charts/actions/variables/CHART_VERSION_PATCH \
-            -f name="CHART_VERSION_PATCH" \
-            -f value="${NEW_CHART_VERSION_PATCH}"
-
       - name: Set Helm Chart Release Versions
+        id: set_versions
         working-directory: charts/paradedb/
         env:
           GH_TOKEN: ${{ secrets.GHA_CREATE_RELEASE_PAT }}
         run: |
+          # Increment the Helm Chart version patch number by one
+          NEW_CHART_VERSION_PATCH=$(( ${{ vars.CHART_VERSION_PATCH }} + 1 ))
+
           # If no appVersion is provided, we use the latest ParadeDB version
           if [ -z "${{ github.event.inputs.appVersion }}" ]; then
             LATEST_TAG=$(curl -s https://api.github.com/repos/paradedb/paradedb/tags | jq -r '.[0].name')
@@ -68,10 +56,28 @@ jobs:
           fi
           # Update appVersion to the GitHub Release version and version to the Helm Chart version
           sed -i "s/^appVersion: .*/appVersion: $APP_VERSION/" Chart.yaml
-          sed -i 's/^version: .*/version: ${{ vars.CHART_VERSION_MAJOR }}.${{ vars.CHART_VERSION_MINOR }}.${{ vars.CHART_VERSION_PATCH }}/' Chart.yaml
+          sed -i "s/^version: .*/version: ${{ vars.CHART_VERSION_MAJOR }}.${{ vars.CHART_VERSION_MINOR }}.${NEW_CHART_VERSION_PATCH}/" Chart.yaml
           cat Chart.yaml
+
+          # Set output to update post-release
+          echo "new_chart_version_patch=${NEW_CHART_VERSION_PATCH}" >> $GITHUB_OUTPUT
 
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.6.0
         env:
           CR_TOKEN: "${{ secrets.GHA_CREATE_RELEASE_PAT }}"
+
+      # We have a separate version for our Helm Chart, since it needs to always increment by
+      # one for every production release, independently of the ParadeDB version. Any non-patch
+      # version increment should be done manually in GitHub Actions Variables.
+      - name: Increment Helm Chart Version Number in GitHub Actions Variables
+        env:
+          GH_TOKEN: ${{ secrets.GHA_CREATE_RELEASE_PAT }}
+        run: |
+          gh api \
+            --method PATCH \
+            -H "Accept: application/vnd.github+json" \
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+            /repos/paradedb/helm-charts/actions/variables/CHART_VERSION_PATCH \
+            -f name='CHART_VERSION_PATCH' \
+            -f value='${{ steps.set_versions.outputs.new_chart_version_patch }}'
