fix lint condition

--- a/.github/workflows/lint-helm.yml
+++ b/.github/workflows/lint-helm.yml
@@ -8,7 +8,7 @@ name: Lint Helm
 on:
   pull_request:
     paths:
-      - "helm/*"
+      - "charts/paradedb/*"
       - ".github/workflows/lint-helm.yml"
   workflow_dispatch:
 
