add basic test scaffolding

--- a/.github/workflows/publish-helm-chart.yml
+++ b/.github/workflows/publish-helm-chart.yml
@@ -23,7 +23,7 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  release:
+  publish-helm-chart:
     name: Publish ParadeDB Helm Chart to GitHub Pages
     runs-on: ubuntu-latest
     permissions:
