--- a/charts/paradedb/templates/tests/auth.yaml
+++ b/charts/paradedb/templates/tests/auth.yaml
@@ -3,7 +3,8 @@ kind: Pod
 metadata:
   name: "{{ .Release.Name }}-test-secrets"
   labels:
-    {{- include "paradedb.labels" . | nindent 4 }}
+    app.kubernetes.io/name: paradedb
+    app.kubernetes.io/instance: "{{ .Release.Name }}"
   annotations:
     "helm.sh/hook": test-success
 spec:
