add pg_analytics, remove age

--- a/charts/paradedb/Chart.yaml
+++ b/charts/paradedb/Chart.yaml
@@ -6,6 +6,7 @@ icon: https://raw.githubusercontent.com/paradedb/paradedb/dev/docs/logo/readme.s
 keywords:
   - paradedb
   - pg_bm25
+  - pg_analytics
 maintainers:
   - name: ParadeDB
     url: https://paradedb.github.io/helm-charts/
