Keep AGE, the issue is with checkinstall
Signed-off-by: Philippe Noël <21990816+philippemnoel@users.noreply.github.com>

--- a/charts/paradedb/values.yaml
+++ b/charts/paradedb/values.yaml
@@ -97,6 +97,7 @@ cluster:
         - CREATE EXTENSION IF NOT EXISTS "postgis" CASCADE;
         - CREATE EXTENSION IF NOT EXISTS "pgrouting" CASCADE;
         - CREATE EXTENSION IF NOT EXISTS "http" CASCADE;
+        - CREATE EXTENSION IF NOT EXISTS "age" CASCADE;
         - CREATE EXTENSION IF NOT EXISTS "rum" CASCADE;
         - CREATE EXTENSION IF NOT EXISTS "citus" CASCADE;
         - CREATE EXTENSION IF NOT EXISTS "pgsodium" CASCADE;
