feat: Add pg_analytics (#76)
Signed-off-by: Philippe Noël <21990816+philippemnoel@users.noreply.github.com>

--- a/charts/paradedb/values.yaml
+++ b/charts/paradedb/values.yaml
@@ -81,7 +81,9 @@ cluster:
       postInitApplicationSQL:
         - CREATE EXTENSION IF NOT EXISTS "pgcrypto" CASCADE;
         - CREATE EXTENSION IF NOT EXISTS "pg_bm25" CASCADE;
+        - CREATE EXTENSION IF NOT EXISTS "pg_analytics" CASCADE;
         - CREATE EXTENSION IF NOT EXISTS "svector" CASCADE;
+        - CREATE EXTENSION IF NOT EXISTS "vector" CASCADE;
         - CREATE EXTENSION IF NOT EXISTS "pg_cron" CASCADE;
         - CREATE EXTENSION IF NOT EXISTS "pg_net" CASCADE;
         - CREATE EXTENSION IF NOT EXISTS "pg_ivm" CASCADE;
@@ -95,15 +97,15 @@ cluster:
         - CREATE EXTENSION IF NOT EXISTS "postgis" CASCADE;
         - CREATE EXTENSION IF NOT EXISTS "pgrouting" CASCADE;
         - CREATE EXTENSION IF NOT EXISTS "http" CASCADE;
-        - CREATE EXTENSION IF NOT EXISTS "rum" CASCADE;
         - CREATE EXTENSION IF NOT EXISTS "age" CASCADE;
+        - CREATE EXTENSION IF NOT EXISTS "rum" CASCADE;
         - CREATE EXTENSION IF NOT EXISTS "citus" CASCADE;
         - CREATE EXTENSION IF NOT EXISTS "pgsodium" CASCADE;
         - CREATE EXTENSION IF NOT EXISTS "pg_partman" CASCADE;
         - CREATE EXTENSION IF NOT EXISTS "pgautofailover" CASCADE;
         - CREATE EXTENSION IF NOT EXISTS "pg_show_plans" CASCADE;
-        - CREATE EXTENSION IF NOT EXISTS "sqlite_fdw" CASCADE;
         - CREATE EXTENSION IF NOT EXISTS "ddlx" CASCADE;
+        - CREATE EXTENSION IF NOT EXISTS "sqlite_fdw" CASCADE;
         - CREATE EXTENSION IF NOT EXISTS "mysql_fdw" CASCADE;
         - ALTER DATABASE paradedb SET search_path TO public,paradedb;
         - ALTER USER paradedb WITH SUPERUSER;
