--- a/.github/workflows/lint-markdown.yml
+++ b/.github/workflows/lint-markdown.yml
@@ -7,6 +7,7 @@ name: Lint Markdown
 
 on:
   pull_request:
+    types: [opened, synchronize, reopened, ready_for_review]
     paths:
       - "**/*.md"
       - "**/*.mdx"
@@ -20,7 +21,8 @@ concurrency:
 jobs:
   lint-markdown:
     name: Lint Markdown Files
-    runs-on: ubuntu-latest
+    runs-on: depot-ubuntu-22.04-4
+    if: github.event.pull_request.draft == false
 
     steps:
       - name: Checkout Git Repository
