--- a/.github/workflows/lint-yaml.yml
+++ b/.github/workflows/lint-yaml.yml
@@ -7,6 +7,7 @@ name: Lint YAML
 
 on:
   pull_request:
+    types: [opened, synchronize, reopened, ready_for_review]
     paths:
       - "**/*.yml"
       - "**/*.yaml"
@@ -19,7 +20,8 @@ concurrency:
 jobs:
   lint-yaml:
     name: Lint YAML Files
-    runs-on: ubuntu-latest
+    runs-on: depot-ubuntu-22.04-4
+    if: github.event.pull_request.draft == false
 
     steps:
       - name: Checkout Git Repository
