--- a/.github/workflows/publish-helm-chart.yml
+++ b/.github/workflows/publish-helm-chart.yml
@@ -25,7 +25,7 @@ concurrency:
 jobs:
   release:
     name: Publish ParadeDB Helm Chart to GitHub Pages
-    runs-on: ubuntu-latest
+    runs-on: depot-ubuntu-22.04-4
     permissions:
       contents: write
 
