--- a/.github/workflows/lint-helm.yml
+++ b/.github/workflows/lint-helm.yml
@@ -20,7 +20,7 @@ concurrency:
 jobs:
   lint-helm:
     name: Lint Helm Charts
-    runs-on: depot-ubuntu-22.04-4
+    runs-on: ubuntu-latest
     if: github.event.pull_request.draft == false
 
     steps:
