--- a/helmfile.yaml
+++ b/helmfile.yaml
@@ -7,7 +7,7 @@ releases:
   - name: paradedb
     namespace: paradedb
     chart: bitnami/postgresql
-    version: 15.2.5
+    version: 15.5.0
     set:
       - name: image.repository
         value: paradedb/paradedb
@@ -20,4 +20,4 @@ releases:
         value: paradedb
 
       - name: postgresqlSharedPreloadLibraries
-        value: "pgaudit,pg_cron,pg_search,pg_analytics"
+        value: "pgaudit,pg_cron,pg_search,pg_lakehouse"
