--- a/.github/workflows/lint-pr-title.yml
+++ b/.github/workflows/lint-pr-title.yml
@@ -7,7 +7,10 @@ name: Lint PR Title
 
 on:
   pull_request:
-    types: [opened, synchronize, reopened, ready_for_review]
+    types:
+      - opened
+      - edited
+      - synchronize
 
 permissions:
   pull-requests: read
@@ -20,7 +23,6 @@ jobs:
   lint-pr-title:
     name: Validate PR Title
     runs-on: ubuntu-latest
-    if: github.event.pull_request.draft == false
 
     steps:
       - name: Checkout Git Repository
